# oop-3uzduotis

./: Greicio analize.xlsx  README.md  funkcijos.cpp  kursiokai.txt  main.cpp  unitTest.cpp
Class versija/List/: CMakeLists.txt  run.sh
Class versija/List/Include/: funkcijos.h  myLib.h  rezultatai.h  strategijos.h  studentas.h  zmogus.h
Class versija/List/src/: funkcijos.cpp  main.cpp  strategijos.cpp  studentas.cpp
Class versija/Vector/: CMakeLists.txt  kursiokai.txt  run.sh  studentai_1000.txt  studentai_10000.txt
Class versija/Vector/Include/: funkcijos.h  myLib.h  rezultatai.h  strategijos.h  studentas.h  zmogus.h
Class versija/Vector/src/: funkcijos.cpp  main.cpp  strategijos.cpp  studentas.cpp
Doxygen (html)/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_galvociu_tikrintojas-members.html  class_galvociu_tikrintojas.html  class_galvociu_tikrintojas.js  class_indeksu_skirstytojas-members.html  class_indeksu_skirstytojas.html  class_indeksu_skirstytojas.js  class_rusiuoti_pagal_galutini_bala_didejanciai-members.html  class_rusiuoti_pagal_galutini_bala_didejanciai.html  class_rusiuoti_pagal_galutini_bala_didejanciai.js  class_rusiuoti_pagal_galutini_bala_mazejanciai-members.html  class_rusiuoti_pagal_galutini_bala_mazejanciai.html  class_rusiuoti_pagal_galutini_bala_mazejanciai.js  class_studentas-members.html  class_studentas.html  class_studentas.js  class_vargsiuku_tikrintojas-members.html  class_zmogus-members.html  (+45 more)
Struct versija/v1.0 (vector)/: CMakeLists.txt  run.sh
Struct versija/v1.0 (vector)/Include/: funkcijos.h  strategijos.h
(+98 files in other folders)
